--- a/bookmap.properties
+++ b/bookmap.properties
@@ -1,3 +1,3 @@
-#Sat Jan 27 17:05:28 JST 2024
-lastBookID=e2b95305-0263-42d9-b1aa-261c41ee8e7c
-lastBookTitle=123456798132aaaaaaaaaaaaaaaaaaaaaaaa
+#Tue Jan 30 13:57:15 JST 2024
+lastBookID=1
+lastBookTitle=スッキリわかるJava入門
