refact : bookShelfCombo.addActionListener

--- a/bookmap.properties
+++ b/bookmap.properties
@@ -1,3 +1,3 @@
-#Tue Jan 30 13:57:15 JST 2024
-lastBookID=1
-lastBookTitle=スッキリわかるJava入門
+#Tue Feb 06 19:44:55 JST 2024
+lastBookID=3b15d819-7c75-4d27-8627-50248fd6dff8
+lastBookTitle=マスタリングTCP/IP
